fixed logo not showing

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ background-color: #fff;
     background-color: #2b2b2b;
     color: #fff;
 }
+
 .formCard {
     margin: 0 auto;
     max-width: 467px;
@@ -97,6 +98,9 @@ img{
     text-decoration: underline;
     font-weight: 550;
     cursor: pointer;
+  }
+  a:hover{
+    color: rgb(67, 133, 255);
   }
 
 label.placeholder,
